--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec: 
   rules:
-    - host: www.ticketing-app-test.xyz
+    - host: ticketing-app-test.xyz
       http:
         paths:
           - path: /api/payments/?(.*)
